<resources>
    <string name="app_name">Jaumo</string>
    <string name="help_gender">Help us to match you up with like-minded people.</string>
    <string name="my_gender">What gender do you identify as ? </string>
    <string name="filter">Filter </string>
    <string name="who_do_you_want_to_see">Who do you want to see ? </string>
    <string name="gender">GENDER</string>
    <string name="age">AGE</string>
    <string name="distance">Distance</string>
    <string name="country">Country</string>
    <string name="vip_filter">VIP Filter</string>
    <string name="body_height">BODY HEIGHT</string>
    <string name="body_type">BODY TYPE</string>
    <string name="language">LANGUAGE</string>
    <string name="education">EDUCATION</string>
    <string name="relation_status">RELATIONSHIP STATUS</string>
    <string name="looking_for">YOU ARE LOOKING FOR</string>
    <string name="religion">RELIGION</string>
    <string name="smoker">SMOKER</string>
    <string name="drinking">DRINKING</string>
    <string name="exercise">EXERCISE</string>
    <string name="tattoos">TATTOOS</string>
    <string name="pets">PETS</string>
    <string name="music">MUSIC</string>
    <string name="diet">DIET</string>
    <string name="children">CHILDREN</string>
    <string name="over_1000_people">Over 15+ people</string>
    <string name="all">All</string>
    <string name="find_your_someone">Find Your Someone</string>
    <string name="sign_up">Sign up</string>
    <string name="signing_in_policy">By signing up, you accept our terms and privacy policy</string>
    <string name="have_account">Do you already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="signup_exp">Please tell us your date of birth so that we can taylor your experience.</string>
    <string name="signup_askAge">How old are you?</string>
    <string name="hint_month">M...</string>
    <string name="hint_year">Year</string>
    <string name="btn_age">Continue</string>
    <string name="imageMaintxt">Show us your smile!</string>
    <string name="imageBodytxt">You won\'t be visible to others until you\'ve added a photo.</string>
    <string name="Image_upload">Upload photo</string>
    <string name="location_Maintxt">Do you want to see people nearby?</string>
    <string name="location_Bodytxt">Increase your chances by allowing access in the following dialogue. We only use your location to find people near by.</string>
    <string name="locationButton_no">Maybe later</string>
    <string name="locationButon_yes">Yes, of course</string>
    <string name="interestMaintxt">What are you looking for?</string>
    <string name="interest_Bodytxt">To see the right people, tell us who your\'re looking for.</string>
    <string name="interestButton2">Women</string>
    <string name="interestButton1">Men</string>
    <string name="hint_day">Day</string>
    <string name="genderButton2">Male</string>
    <string name="genderButton1">Female</string>
    <string name="gender_Bodytxt">Help us to match you up with like-minded people.</string>
    <string name="gender_Maintxt">What gender do you identify as?</string>
    <string name="gender_allsmall">Gender</string>
    <string name="men_women">Men + women</string>
    <string name="save">Save</string>
    <string name="distance_allsmall">Distance</string>
    <string name="distance_10km">Distance up to 10km</string>
    <string name="distance_25km">Distance up to 25km</string>
    <string name="distance_50km">Distance up to 50km</string>
    <string name="distance_100km">Distance up to 100km</string>
    <string name="distance_250km">Distance up to 250km</string>
    <string name="distance_500km">Distance up to 500km</string>
    <string name="distance_1000km">Distance up to 1000km</string>
    <string name="distance_matter">Distance doesnt matter</string>
    <string name="country_allsmall">Country</string>
    <string name="only_from_my_country">Only from my country</string>
    <string name="abhay_sharma">* Abhay Sharma *</string>
    <string name="suraj_gupta">* Suraj Gupta *</string>
    <string name="binod_jaiswal">* Binod Jaiswal *</string>
    <string name="tanmay_punit">* Tanmay Punit *</string>
    <string name="nipun_jain">* Nipun Jain *</string>
    <string name="bunty_gosh">* Bunty Gosh *</string>
    <string name="kailash_patel">* Kailash Patel *</string>
    <string name="dhruv_shorey">* Dhruv Shorey *</string>
    <string name="rahul_singh">* Rahul Singh *</string>
    <string name="hiren_mistry">* Hiren Mistry *</string>
    <string name="pravin_fransis">* Pravin Fransis *</string>
    <string name="gaurav_singh">* Gaurav Singh *</string>
    <string name="aditya_sharma">* Aditya Sharma *</string>
    <string name="mousin_sayyed">* Mousin Sayyed *</string>
    <string name="amir_gupta">* Amir Gupta *</string>
    <string name="arsalan_shaikh">* Arsalan Shaikh *</string>
    <string name="vineet_yadav">* Vineet Yadav *</string>
    <string name="bipin_pal">* Bipin Pal *</string>
    <string name="sachin_goel">* Sachin Goel *</string>
    <string name="abhinav_bhati">* Abhinav Bhati *</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="add_photos">Add photos</string>
    <string name="guest">Guest,28</string>
    <string name="begumbazar">Begumbazar . 1km</string>
    <string name="online">Online</string>
    <string name="verify_profile">Verify your profile</string>
    <string name="verify_message">As a verified user, you are shown more often to other users</string>
    <string name="hometown">HOMETOWN</string>
    <string name="add">Add</string>
    <string name="profession">PROFESSION</string>
    <string name="english">English</string>
    <string name="looking_for_only">Looking For</string>
    <string name="anita_dev">* Anita Dev*</string>
    <string name="suman_jaiswal">* Suman Jaiswal *</string>
    <string name="neha_sharma">* Neha Sharma *</string>
    <string name="jaiswi_jain">* Jaiswi Jain *</string>
    <string name="priya_rai">* Priya Rai *</string>
    <string name="suman_shiddique">* Suman Shiddique *</string>
    <string name="dimple_mundwa">* Dimple Mundwa *</string>
    <string name="shreya_singh">* Shreya Singh *</string>
    <string name="nidhi_chauhan">* Nidhi Chauhan *</string>
    <string name="jaishri_hansa">* Jaishri Hansa *</string>
    <string name="muskan_khan">* Muskan Khan *</string>
    <string name="priyanka_lobhe">* Priyanka Lobhe *</string>
    <string name="yamini_gautam">* Yamini Gautam *</string>
    <string name="kaira_singh">* Kaira Singh *</string>
    <string name="heena_shaikh">* Heena Shaikh *</string>
    <string name="kulsum_khan">* Kulsum Khan *</string>
    <string name="nisha_dubey">* Nisha Dubey *</string>
    <string name="lovely_joy">* Lovely Joy *</string>
    <string name="kareshma_yadav">* Kareshma Yadav *</string>
    <string name="neeta_singh">* Neeta Singh *</string>
    <string name="coin_0">0</string>
    <string name="coins">COINS</string>
    <string name="settings">Settings</string>
    <string name="sent_likes">Sent likes</string>
    <string name="become_vip">Become a VIP</string>
    <string name="upgrade">Upgrade to premium!</string>
    <string name="noMessage">No new messages yet : (</string>
    <string name="messages">Messages</string>
    <string name="go_back">Go back!</string>
    <string name="login">Log in</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="show">Show</string>
    <string name="create_account">or create a new account</string>
    <string name="enter_email_address">enter email address</string>
    <string name="enter_password">password</string>
    <string name="google_login">Login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_name">Your name</string>
    <string name="sent_likes_settings">Sent Likes</string>
    <string name="ok">OK</string>
    <string name="title_activity_priya__rai">Priya_Rai</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="want">you want.</string>
    <string name="India">India</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_profession">Enter Profession</string>
    <string name="where_do_you_live">Where do you live ?</string>
    <string name="your_profession">What is your profession</string>
    <string name="what_are_you_looking_for">What are you looking for ? </string>
    <string name="i_want">I want</string>
    <string name="ask_me">Ask me</string>
    <string name="a_man">a man</string>
    <string name="thank_you">We the members of team yellow are greatful  for getting this wonderful oppurtunity to collaborate with each other and present it to you.This experience has taught us many things and helped us to work with great people.Wishing everyone in Masai good health and a great year and a wonderful journey ahead.</string>
    <string name="team">Team Yellow.</string>
    <string name="regards">Regards,</string>


</resources>