<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/google_bg"
    android:layout_height="match_parent"
    tools:context=".Google_Login">

    <ImageView
        android:id="@+id/ivGoogle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_220"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/google_bg"/>



    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:textColorHint="@color/black"
        android:layout_marginRight="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@id/ivGoogle"
        android:background="@drawable/rectangle_white_bg"
        android:hint="@string/your_name"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:textColorHint="@color/black"
        android:layout_marginRight="@dimen/dp_20"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:background="@drawable/rectangle_white_bg"
        android:hint="@string/enter_email_address"/>


    <EditText
        android:id="@+id/etGooglePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/sp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        android:background="@drawable/rectangle_white_bg"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        />



    <RadioGroup
        app:layout_constraintTop_toBottomOf="@id/etGooglePassword"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGoogleLogin"
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintTop_toBottomOf="@id/rgGender"
        android:layout_marginTop="@dimen/sp_20"
        android:background="@drawable/rectangle_red_bg"
        android:text="@string/google_login"
        android:textSize="@dimen/sp_25"
        android:fontFamily="cursive"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"/>


</androidx.constraintlayout.widget.ConstraintLayout>