<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Age_Activity">


    <TextView
        android:id="@+id/tvAge_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:background="@color/light_gray"
        android:drawableStart="@drawable/age_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAge_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_askAge"
        android:layout_margin="@dimen/dp_30"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvAge_scroll"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAge_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/signup_exp"
        android:textColor="@color/navyblue_body"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="@+id/tvAge_main"
        app:layout_constraintTop_toBottomOf="@+id/tvAge_main" />

    <EditText
        android:id="@+id/etDate_day"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hint_day"
        android:inputType="date"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAge_body" />

    <EditText
        android:id="@+id/etDate_month"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_40"
        android:inputType="date"
        android:hint="@string/hint_month"
        android:textColorHint="@color/black"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toEndOf="@+id/etDate_day"
        app:layout_constraintTop_toBottomOf="@+id/tvAge_body" />


    <EditText
        android:id="@+id/etDate_year"
        android:layout_width="@dimen/dp_123"
        android:layout_height="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_40"
        android:ems="10"
        android:hint="@string/hint_year"
        android:inputType="date"
        android:paddingStart="@dimen/dp_2"
        android:paddingEnd="@dimen/dp_15"
        android:textSize="@dimen/sp_28"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toEndOf="@+id/etDate_month"
        app:layout_constraintTop_toBottomOf="@+id/tvAge_body" />

    <Button
        android:id="@+id/btn_ageActivity"
        style="@style/Buttons"
        android:text="@string/btn_age"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>