<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Location">

    <TextView
        android:id="@+id/tvLocation_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:drawableStart="@drawable/scroll_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvLocation_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:text="@string/location_Maintxt"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocation_scroll" />

    <TextView
        android:id="@+id/tvLocation_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/location_Bodytxt"
        android:textColor="@color/navyblue_body"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="@+id/tvLocation_main"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation_main" />

    <Button
        android:id="@+id/btn1_Location_no"
        style="@style/Buttons"
        android:text="@string/locationButton_no"
        app:layout_constraintBottom_toTopOf="@id/btn2_Location_yes"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2_Location_yes"
        style="@style/Buttons"
        android:text="@string/locationButon_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>