<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Interest">

    <TextView
        android:id="@+id/tvInterest_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:drawableStart="@drawable/interest_scroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInterest_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        android:text="@string/interestMaintxt"
        android:textColor="@color/blue_main"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInterest_scroll" />

    <TextView
        android:id="@+id/tvInterest_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/interest_Bodytxt"
        android:textColor="@color/navyblue_body"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="@+id/tvInterest_main"
        app:layout_constraintTop_toBottomOf="@+id/tvInterest_main" />


    <Button
        android:id="@+id/btn2_Interest_women"
        style="@style/Buttons"
        android:text="@string/interestButton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn1_Interest_men"
        style="@style/Buttons"
        android:text="@string/interestButton1"
        app:layout_constraintBottom_toTopOf="@+id/btn2_Interest_women"
        app:layout_constraintStart_toStartOf="@+id/btn2_Interest_women" />


</androidx.constraintlayout.widget.ConstraintLayout>