<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpWithEmail">

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_black_1_" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more" />

    <LinearLayout
        android:id="@+id/ll_name"
        style="@style/Filter_LinearLayout"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:id="@+id/tv_name"
            style="@style/Filter_TextView"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/your_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_name"
            style="@style/Filter_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_20"
            android:drawableEnd="@drawable/ic_user"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_email"
        style="@style/Filter_LinearLayout"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_name">

        <TextView
            android:id="@+id/tv_email"
            style="@style/Filter_TextView"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/email_address"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Filter_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_20"
            android:drawableEnd="@drawable/ic_mail"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_password"
        style="@style/Filter_LinearLayout"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_email">

        <TextView
            android:id="@+id/tv_password"
            style="@style/Filter_TextView"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Filter_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_20"
            android:drawableEnd="@drawable/ic_key"
            android:textColor="@color/black" />


    <LinearLayout
        android:id="@+id/ll_gender"
        style="@style/Filter_LinearLayout"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_password">

        <RadioGroup
            app:layout_constraintTop_toBottomOf="@id/ll_password"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginTop="@dimen/dp_5"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"/>

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginTop="@dimen/dp_5"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"/>
        </RadioGroup>


    </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btn_signin"
        style="@style/ButtonsWithOutMargin"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/sign_in"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        app:layout_constraintBottom_toTopOf="@id/tv_newaccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_password"
        app:layout_constraintVertical_bias="1.0">

    </Button>

    <TextView
        android:id="@+id/tv_newaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/create_account"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>